# src/api_specs/api.yaml
@@ -38,6 +38,8 @@ paths:
         grpc client test
       x-eov-operation-id: test
       x-eov-operation-handler: test
+      security:
+        - auth: []
       responses:
         '200':
           description: OK
@@ -172,3 +174,8 @@ components:
       schema:
         type: number
       required: true
+  securitySchemes:
+    auth:
+      type: apiKey
+      name: x-authorization
+      in: header
